Backend - API getTopUsersByGrammarId, getVocabularyLearningPercentage, getCorrectAnswerPercentageByGrammars, getCorrectAnswerPercentageByParts. - handle processing learning result. Frontend: - Processing Learning Result UI

--- a/frontend/public/locales/vi/translation.json
+++ b/frontend/public/locales/vi/translation.json
@@ -204,6 +204,27 @@
   "correct": "Đúng",
   "showResult": "Hiển thị kết quả",
 
+  "learningResult": "Kết quả học tập",
+
+  "reading": "Đọc hiểu",
+  "listening": "Nghe hiểu",
+  "overall": "Tổng quan",
+  "answered": "Số câu đã trả lời",
+  "ranking": "Xếp hạng",
+  "fullName": "Họ và tên",
+  "testName": "Tên bài kiểm tra",
+  "correctAnswers": "Số câu trả lời đúng",
+  "testTime": "Thời gian làm bài",
+  "rank1": "Hạng 1",
+  "rank2": "Hạng 2",
+  "rank3": "Hạng 3",
+  "notUpdated": "Chưa cập nhật",
+  "dataAndAnalysis": "Số liệu và phân tích",
+  "studentRanking": "Xếp hạng học viên",
+  "averageTime": "Thời gian trung bình (phút)",
+  "userCount": "Số lượng người dùng",
+  "examTimeByDay": "Thời gian thi theo ngày",
+
   "quote1": "Không có gì quý hơn độc lập, tự do.",
   "quote2": "Chúng ta thế nào, thế giới thế ấy.",
   "quote3": "Nếu bạn đặt mục tiêu của mình quá cao và thất bại, bạn sẽ thất bại ở một tầm cao mà vượt qua cả thành công của người khác.",
