--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -203,6 +203,27 @@
   "correct": "正确",
   "showResult": "显示结果",
 
+  "learningResult": "学习结果",
+
+  "reading": "阅读",
+  "listening": "听力",
+  "overall": "总体",
+  "answered": "回答的数量",
+  "ranking": "排名",
+  "fullName": "姓名",
+  "testName": "测试名称",
+  "correctAnswers": "正确答案数量",
+  "testTime": "测试时间",
+  "rank1": "第一名",
+  "rank2": "第二名",
+  "rank3": "第三名",
+  "notUpdated": "未更新",
+  "dataAndAnalysis": "数据与分析",
+  "studentRanking": "学生排名",
+  "averageTime": "平均时间（分钟）",
+  "userCount": "用户数量",
+  "examTimeByDay": "按天计时的考试",
+
   "quote1": "没有什么比独立和自由更珍贵",
   "quote2": "我们是什么，世界就是什么。",
   "quote3": "如果你设定的目标高得离谱却失败了，你的失败也会超越他人的成功。",
