--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -203,6 +203,27 @@
   "correct": "Correct",
   "showResult": "Show Result",
 
+  "learningResult": "Learning Result",
+
+  "reading": "Reading",
+  "listening": "Listening",
+  "overall": "Overall",
+  "answered": "Answered",
+  "ranking": "Ranking",
+  "fullName": "Full Name",
+  "testName": "Test Name",
+  "correctAnswers": "Number of Correct Answers",
+  "testTime": "Test Time",
+  "rank1": "Rank 1",
+  "rank2": "Rank 2",
+  "rank3": "Rank 3",
+  "notUpdated": "Not Updated",
+  "dataAndAnalysis": "Data and Analysis",
+  "studentRanking": "Student Ranking",
+  "averageTime": "Average Time (m)",
+  "userCount": "User Count",
+  "examTimeByDay": "Exam Time by Day",
+
   "quote1": "Nothing is more precious than independence and freedom.",
   "quote2": "What we are, the world is.",
   "quote3": "If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success.",
