--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -224,6 +224,22 @@
   "userCount": "User Count",
   "examTimeByDay": "Exam Time by Day",
 
+  "pleaseVerifyRecaptcha": "Please verify reCAPTCHA!",
+  "sendingEmail": "Sending email to",
+  "emailSendingError": "Email sending error",
+  "checkEmailForReset": "Check email to reset your password",
+  "enterEmailOrVerifyCaptcha": "Please enter email or verify CAPTCHA",
+  "captchaVerificationFailed": "CAPTCHA verification failed",
+  "userNotFound": "User not found in the system",
+  "invalidInput": "Invalid input!",
+  "passwordRecovery": "Password Recovery",
+  "remainingAttempts": "Remaining attempts:",
+  "clearAll": "Clear",
+  "otpVerification": "OTP Verification",
+  "enterOtp": "Enter OTP",
+  "forgotPassword": "Forgot Password",
+  "send": "Send",
+
   "ourServices": "Our Services",
   "whatOurClientsSay": "What our clients say",
   "meetTheTeam": "Meet the Team",
