--- a/frontend/public/locales/vi/translation.json
+++ b/frontend/public/locales/vi/translation.json
@@ -225,6 +225,22 @@
   "userCount": "Số lượng người dùng",
   "examTimeByDay": "Thời gian thi theo ngày",
 
+  "pleaseVerifyRecaptcha": "Vui lòng xác thực reCAPTCHA!",
+  "sendingEmail": "Đang gửi email đến",
+  "emailSendingError": "Lỗi gửi email",
+  "checkEmailForReset": "Kiểm tra email để đổi lại mật khẩu",
+  "enterEmailOrVerifyCaptcha": "Vui lòng nhập email hoặc xác thực CAPTCHA",
+  "captchaVerificationFailed": "Xác thực CAPTCHA thất bại",
+  "userNotFound": "Không tìm thấy người dùng trong hệ thống",
+  "invalidInput": "Đầu vào không hợp lệ!",
+  "passwordRecovery": "Khôi phục mật khẩu",
+  "remainingAttempts": "Số lần thử còn lại:",
+  "clearAll": "Xóa hết",
+  "otpVerification": "Xác thực OTP",
+  "enterOtp": "Nhập OTP",
+  "forgotPassword": "Quên mật khẩu",
+  "send": "Gửi",
+
   "ourServices": "Dịch Vụ Của Chúng Tôi",
   "whatOurClientsSay": "Khách Hàng Nói Gì Về Chúng Tôi",
   "meetTheTeam": "Gặp Gỡ Đội Ngũ",
