--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -224,6 +224,22 @@
   "userCount": "用户数量",
   "examTimeByDay": "按天计时的考试",
 
+  "pleaseVerifyRecaptcha": "请验证reCAPTCHA！",
+  "sendingEmail": "正在发送邮件到",
+  "emailSendingError": "发送邮件错误",
+  "checkEmailForReset": "检查邮件以重置密码",
+  "enterEmailOrVerifyCaptcha": "请输入邮箱或验证CAPTCHA",
+  "captchaVerificationFailed": "CAPTCHA验证失败",
+  "userNotFound": "系统中未找到用户",
+  "invalidInput": "输入无效！",
+  "passwordRecovery": "密码恢复",
+  "remainingAttempts": "剩余尝试次数：",
+  "clearAll": "清除所有",
+  "otpVerification": "OTP验证",
+  "enterOtp": "输入OTP",
+  "forgotPassword": "忘记密码",
+  "send": "发送",
+
   "ourServices": "我们的服务",
   "whatOurClientsSay": "客户如何评价我们",
   "meetTheTeam": "认识团队",
